# ClipTo3D

./: .env  .gitattributes  .gitignore  audio.py  convert_colmap_to_gs.py  frames.py  main.py  medal_clip.py  pyproject.toml
3d_pc/: 3dpc.py  try.py  view3d.py
depth_estimation/: depth.py
geometry_based_reconstruction/: gbr.py  helper.py
neural_reconstruction/: gsplatting.py
object_detection/: sam2_run.py
point_clouds/: point_clouds_file.py
structure_from_motion/: sfm.py
