[project]
name = "cliptoworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gsplat>=1.5.3",
    "imageio>=2.37.0",
    "matplotlib",
    "plyfile>=1.1.3",
    "pyglet==1.5.27",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "requests>=2.32.5",
    "trimesh>=4.9.0",
]
